Fixed spacing

--- a/client/styles/Boardcard.module.css
+++ b/client/styles/Boardcard.module.css
@@ -1,12 +1,12 @@
 .img-card {
-  margin: 20px auto;
+  margin: 20px 10px;
   padding: 5px;
   display: inline-block;
   width: 273px;
   height: 410px;
   cursor: pointer;
   white-space: wrap;
-  min-width: 250;
+  min-width: 250px;
 }
 
 .img-card:hover .exec-pic {
